--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_hello"
-                style="@style/textH5Black"
+                style="@style/textH4White"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -39,12 +40,31 @@
 
             <TextView
                 android:id="@+id/tv_name"
-                style="@style/textH5Black"
+                style="@style/textH4White"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="24dp"
-                android:text="Nama" />
+                android:text="Nama"
+                android:layout_weight="1"
+                />
+
+            <ImageButton
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@color/green_500"
+                android:src="@drawable/baseline_bookmark_24" />
+
+            <ImageButton
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="24dp"
+                android:background="@color/green_500"
+                android:src="@drawable/baseline_person_24" />
 
         </LinearLayout>
 
