--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:ems="10"
+            android:drawableStart="@drawable/ic_baseline_email_24"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_login"
@@ -72,6 +73,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/edEmail"
             app:layout_constraintHorizontal_bias="0.0"
