--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:ems="10"
+            android:drawableStart="@drawable/ic_baseline_person_24"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_register"
@@ -73,6 +74,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:drawableStart="@drawable/ic_baseline_email_24"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/edName"
             app:layout_constraintHorizontal_bias="0.0"
