--- a/app/src/main/res/layout/activity_cek_subsidi.xml
+++ b/app/src/main/res/layout/activity_cek_subsidi.xml
@@ -43,6 +43,15 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_500"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
     <CheckBox
         android:id="@+id/cb_kelompok_tani"
         android:layout_width="match_parent"
