--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -43,6 +43,15 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_detail_img"
             app:srcCompat="@drawable/ic_baseline_share_24" />
 
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_500"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
         <ImageView
             android:id="@+id/iv_detail_img"
             android:layout_width="300dp"
