--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,6 +64,7 @@
             style="@style/textH4White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:text="@string/name"
             app:layout_constraintBottom_toBottomOf="@+id/tvHalo"
             app:layout_constraintStart_toEndOf="@+id/tvHalo"
@@ -106,7 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="100dp"
-                    android:contentDescription="@string/calculator_fertilizer"
+                    android:contentDescription="@string/recommendetion_fertilizer"
                     android:scaleType="centerCrop"
                     android:src="@drawable/pupuk"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -124,7 +125,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
-                    android:text="@string/calculator_fertilizer"
+                    android:text="@string/recommendetion_fertilizer"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/img_item_cal" />
