--- a/app/src/main/res/layout/item_bookmark.xml
+++ b/app/src/main/res/layout/item_bookmark.xml
@@ -45,11 +45,10 @@
             style="@style/textRegular1White"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/temperature"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView2"
             card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
-            card_view:layout_constraintStart_toEndOf="@+id/textView2"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView2" />
 
         <TextView
@@ -67,22 +66,22 @@
             style="@style/textRegular1White"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/humidity"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView13"
             card_view:layout_constraintEnd_toEndOf="@+id/tv_item_temparature"
             card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toEndOf="@+id/textView13"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView13"
             card_view:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView15"
             style="@style/textRegular1White"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/moisture"
+            card_view:layout_constraintEnd_toEndOf="@+id/textView13"
             card_view:layout_constraintStart_toStartOf="@+id/textView13"
             card_view:layout_constraintTop_toBottomOf="@+id/textView13" />
 
@@ -91,11 +90,10 @@
             style="@style/textRegular1White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/moisture"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView15"
-            card_view:layout_constraintStart_toEndOf="@+id/textView15"
-            card_view:layout_constraintTop_toBottomOf="@+id/textView13" />
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
+            card_view:layout_constraintTop_toTopOf="@+id/textView15" />
 
         <TextView
             android:id="@+id/textView17"
@@ -112,19 +110,18 @@
             style="@style/textRegular1White"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="@string/soil_type"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView17"
             card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
-            card_view:layout_constraintStart_toEndOf="@+id/textView17"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView17" />
 
         <TextView
             android:id="@+id/textView18"
             style="@style/textRegular1White"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/crop_type"
@@ -136,10 +133,9 @@
             style="@style/textRegular1White"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/crop_type"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView18"
-            card_view:layout_constraintStart_toEndOf="@+id/textView18"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView18" />
 
         <TextView
@@ -153,19 +149,18 @@
             card_view:layout_constraintTop_toBottomOf="@+id/textView18" />
 
         <TextView
-            style="@style/textRegular1White"
             android:id="@+id/tv_item_nitrogen"
+            style="@style/textRegular1White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/nitrogen"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView19"
-            card_view:layout_constraintStart_toEndOf="@+id/textView19"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView19" />
 
         <TextView
-            style="@style/textRegular1White"
             android:id="@+id/textView21"
+            style="@style/textRegular1White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -174,14 +169,13 @@
             card_view:layout_constraintTop_toBottomOf="@+id/textView19" />
 
         <TextView
-            style="@style/textRegular1White"
             android:id="@+id/tv_item_potassium"
+            style="@style/textRegular1White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/potasium"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView21"
-            card_view:layout_constraintStart_toEndOf="@+id/textView21"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView21" />
 
         <TextView
@@ -199,11 +193,104 @@
             style="@style/textRegular1White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:text="@string/phosphorous"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView23"
-            card_view:layout_constraintStart_toEndOf="@+id/textView23"
+            card_view:layout_constraintStart_toStartOf="@+id/guideline"
             card_view:layout_constraintTop_toTopOf="@+id/textView23" />
+
+        <TextView
+            android:id="@+id/textView14"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView2"
+            card_view:layout_constraintEnd_toStartOf="@+id/guideline"
+            card_view:layout_constraintTop_toTopOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/textView16"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintEnd_toStartOf="@+id/guideline"
+            card_view:layout_constraintTop_toTopOf="@+id/textView13" />
+
+        <TextView
+            android:id="@+id/textView20"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView15"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_moisture"
+            card_view:layout_constraintTop_toTopOf="@+id/textView15" />
+
+        <TextView
+            android:id="@+id/textView22"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView17"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_soil_type"
+            card_view:layout_constraintTop_toTopOf="@+id/textView17" />
+
+        <TextView
+            android:id="@+id/textView24"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView18"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_crop_type"
+            card_view:layout_constraintTop_toTopOf="@+id/textView18" />
+
+        <TextView
+            android:id="@+id/textView25"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView19"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_nitrogen"
+            card_view:layout_constraintTop_toTopOf="@+id/textView19" />
+
+        <TextView
+            android:id="@+id/textView26"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView21"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_potassium"
+            card_view:layout_constraintTop_toTopOf="@+id/textView21" />
+
+        <TextView
+            android:id="@+id/textView27"
+            style="@style/textRegular1White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/colon"
+            card_view:layout_constraintBottom_toBottomOf="@+id/textView23"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_phosphorous"
+            card_view:layout_constraintTop_toTopOf="@+id/textView23" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            card_view:layout_constraintGuide_begin="160dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
